# clawp

./: .gitignore  README.md  pyproject.toml
clawp/: api.py  main.py  message.py  provider.py  tool.py
clawpy/: main.py  message.py  tool.py
gateway/: pyproject.toml
gateway/messages/: channel_system.template  channel_system.txt  channel_web_ui.template  channel_web_ui.txt  init_system.md  malformed_channel_header.template  message_metadata.template  missing_channel_header.template  missing_channel_header_no_fallback.txt  session_initialization.template  session_initialization.txt
gateway/src/: agent.py  api.py  assistant.py  main.py  message.py  model.py  provider.py  store.py  tool.py  util.py
gateway/src/api/: __init__.py  api.py  dependency.py  model.py
gateway/src/channel/: __init__.py  base.py  matrix.py  multi.py  system.py
gateway/src/model/: __init__.py  base.py  channel.py  message.py
gateway/tests/: conftest.py  test_store.py  test_util.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts  style.css
web/src/components/chat/: ChatInput.vue  MessageBubble.vue  MessageList.vue
web/src/components/layout/: TopBar.vue
web/src/services/: api.ts
web/src/stores/: chatStore.ts
web/src/types/: api.ts  chat.ts
