[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "clawp"
version = "0.1.0"
description = "An AI assistant framework"
authors = [{ name = "Marc Lehmann", email = "marc@marclehmann.name" }]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
]
dependencies = [
    "fastmcp>=3.1.1",
    "fastapi>=0.135.3",
    "openrouter>=0.7.11",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.42.0",
    "whenever>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "yapf>=0.43.0",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
source = "https://github.com/dddsnn/clawp"

[tool.pytest]
minversion = "9.0"
addopts = ["-v", "-l"]
asyncio_mode = "auto"
testpaths = ["tests"]
log_level = "debug"
